--- a/Структурные паттерны/Декоратор/Описание.md
+++ b/Структурные паттерны/Декоратор/Описание.md
@@ -1,5 +1,5 @@
-
-Декоратор — это структурный паттерн проектирования, который позволяет **динамически добавлять объектам новую функциональность**, оборачивая их в полезные "обёртки". Это гибкая альтернатива наследованию для расширения функциональности.
+Декоратор
+— это структурный паттерн проектирования, который позволяет **динамически добавлять объектам новую функциональность**, оборачивая их в полезные "обёртки". Это гибкая альтернатива наследованию для расширения функциональности.
 
 ## Основная логика
 
